fixed submit button mobile size

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -397,7 +397,7 @@ section#register {
     background-color: $gold;
     color: $red;
     padding: 10px 2%;
-    min-width: 80px;
+    min-width: 85px;
     width: 15%;
     margin-left: 5px;
     cursor: pointer;
